--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <script src="./app.js" defer></script>
 </head>
 <body>
-  <input type="number" name="a" id="a"/>
+  <!-- <input type="number" name="a" id="a"/>
   <input type="number" name="b" id="b"/>
-  <button>Add</button>
-  <script src="./js-only.js"></script>
+  <button>Add</button> -->
 </body>
 </html>
