--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <script src="./app.js" defer></script>
+  <script src="./understanding-ts/app.js" defer></script>
+  <script src="./understanding-ts/analytics.js" defer></script>
+
 </head>
 <body>
   <!-- <input type="number" name="a" id="a"/>
