--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <script src="./understanding-ts/app.js" defer></script>
-  <script src="./understanding-ts/analytics.js" defer></script>
+  <script src="./dist/app.js" defer></script>
+  <script src="./dist/analytics.js" defer></script>
 
 </head>
 <body>
   <!-- <input type="number" name="a" id="a"/>
   <input type="number" name="b" id="b"/>
   <button>Add</button> -->
+  <button>Press</button>
 </body>
 </html>
